<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainPage">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tlMain"
        app:srcCompat="@drawable/bg3"
        android:contentDescription="TODO" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tlMain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabGravity="center">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabMyProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_progress" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabSubjects"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subjects" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabGetHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/get_help" />
    </com.google.android.material.tabs.TabLayout>
</androidx.constraintlayout.widget.ConstraintLayout>